@@ -27,8 +27,7 @@ public class AdminUserDetails implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         //返回当前用户的角色
         return resourceList.stream()
-                .map(role ->new SimpleGrantedAuthority(role.getId()+":"+role.getName()))
-                .collect(Collectors.toList());
+                .map(role ->new SimpleGrantedAuthority(role.getId()+":"+role.getName())).toList();
     }
 
     @Override
